Actualizada la plantilla con información del proyecto y estudiante

--- a/templates/index.html
+++ b/templates/index.html
@@ -64,14 +64,14 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">Bienvenidos a mi nueva empresa de videojuegos retro, me dedico a desarrollar páginas web para que los usuarios puedan disfrutar de los videojuegos, a comparación de otras empresas, mis páginas están hechas de la forma más eficiente posible para que el usuario tenga la facilidad de navegar y tener la mejor experiencial.</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">En el boton de abajo tendras acceso a una versión web del clasico juego retro de los ochentas: Tetris , creado y modificado especialmente a modo de presentación de esta página web, espero lo disfruten!</p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
+                    <a class="btn btn-xl btn-outline-light text-black" href="https://startbootstrap.com/theme/freelancer/">
                         <i class="fas fa-download me-2"></i>
-                        Free Download!
+                        Juega ahora!
                     </a>
                 </div>
             </div>
@@ -88,10 +88,10 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- About Section Content-->
-                <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
-                </div>
+                
+                    <div class="col-lg-auto ms-auto"><p class="lead">Mi nombre es Leonardo Hernandez y soy el creador de esta página, estoy cursando la preparatoria en la escuela Fray Angelico Campeche en el Sexto Semestre, espero que les guste mi página!</p></div>
+        
+                
                 <!-- About Section Button-->
                 
             </div>
